2005-06-21    <layer@HOBART>
4.0, rc4

	* nfs.cl: in with-nfs-err-handler, move illegal-filename-error
	  clause above file-error one
	* fhandle.cl: make illegal-filename-error a subclass of
	  file-error, so clients get a good error message and the errlog
	  file doesn't get a log of these types of errors.

2005-06-18    <layer@HOBART>
4.0, rc3

	* Makefile: allow version to include letters (ie, rc3)
	* nfs.cl: bind *print-structure* and *print-array* to nil so
	  errlog doesn't grow so fast.

2005-06-08    <layer@HOBART>
4.0, rc2

	* loadem.cl: turn off debugging stuff
	* Makefile: remove references to `ntservice' since it's now a
	  module in ACL

2005-06-06    <layer@HOBART>

	* attr.cl: remove debugging logit's
	* loadem.cl: turn on debugging

2005-06-06    <dancy@CANDY2K>

	* openfile.cl: Added macro with-nfs-open-file which holds
	*open-file-cache-lock* for the duration of the body.  This should
	prevent the open file reaper from closing files that are still
	being processed.

	* nfs.cl: Changed all instances of get-open-file to
	with-nfs-open-file.

2005-06-01    <layer@HOBART>
4.0, rc1

	* nfs.cl: version 4.0

2005-06-01    <dancy@CANDY2K>

	* nfs.cl: write3 procedure: honor stable-how parameter (via fsync).

	* nfs.cl: commit procedure: Actually do something now (via fsync).

	* nfs.cl: setattr3 procedure: Compare the guard time against
	pre-op-attrs-ctime instead of file-write-date.

	* nfs.cl: write3 procedure:  Compute the 'wrote' count correctly.
	
2005-06-01    <layer@HOBART>

	* loadem.cl: ntservice is a patch now, so it's not needed
	* main.cl: require :ntservice

2005-05-31    <dancy@CANDY2K>

	* nfs.cl: access procedure: Don't return access bits that the
	client didn't ask for.  This upsets Solaris 7.

	* nfs.cl: pathconf procedure: Return file attributes the right
	way (post-op-attrs).

	* Makefile: Removed the hacks that were in place when the
	configuration program was built using a different version of lisp
	than the nfs server.
