@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.9 2005/01/26 00:23:49 layer Exp $
+# $Id: Makefile,v 1.10 2005/06/22 23:14:27 dancy Exp $
 
 ### IMPORTANT: the nightly builds the product need to use a local copy and
 ###	       and not one in /c/Program Files/...  only change the ../aclxxx
@@ -9,8 +9,6 @@ ALLEGRO=$(LISPDIR)/allegro
 build: configure/configure.exe
 
 configure/configure.exe:
-	# Hack.. to avoid incompatible fasl warning on shared files
-	rm -f ../*.fasl
 	$(ALLEGRO) -L buildit.cl
 
 clean:
